--- a/README.Rmd
+++ b/README.Rmd
@@ -9,12 +9,17 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Repository zur Lehrveranstaltung Empirische Forschungsmethoden für Fortgeschrittene an der RWTH Aachen
 
+
+
 # Aktuelle Informationen
 ## Begleitendes Seminar
 
-Raum C.A.R.L. S01 8:30 - 10:00 Uhr
-Sie benötigen einen Computer (Laptop oder ähnliches, Tablet funktioniert NICHT!)
-Auf diesem Laptop werden Sie Software installieren. Sie sollten daher ca. 3-4 GB Speicherplatz auf diesem Gerät haben und Admin-Rechte haben.
-Auf MAC benötigen Sie Sierra oder höher
-Auf Windows benötigen Sie
+Sollten Sie zu diesem Seminar noch nicht angemeldet sein, bitten wir Sie sich zu diesem Seminar anzumelden. Der Name der Anmeldung lautet: **Empirisch-experimentelle Forschungsmethoden in der Anwendung**. Die Inhalte des Seminars haben einen starken Bezug zur Klausur dieser Vorlesung. Daher ist es nicht zu empfehlen, nur eine der beiden Lehrveranstaltungen zu besuchen.
+
+Termin: **Raum C.A.R.L. S01** Freitags 8:30 - 10:00 Uhr
+ 
+* Sie benötigen einen Computer (Laptop oder ähnliches, Tablet funktioniert NICHT!)
+  * Auf diesem Laptop werden Sie Software installieren. Sie sollten daher ca. 3-4 GB Speicherplatz  auf diesem Gerät haben und Admin-Rechte haben.
+  * Auf MAC benötigen Sie Sierra oder höher
+  * Auf Windows benötigen Sie 
 
