--- a/Seminar/README.Rmd
+++ b/Seminar/README.Rmd
@@ -7,4 +7,15 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Inhalt vom Seminar
+### Liste von Software, die Sie installieren werden:
+
+* R [R Version 3.6.1](https://packages.othr.de/cran/)
+* RStudio [RStudio Free IDE](https://rstudio.com/products/rstudio/download/)
+* Git [Git Version 2.3](https://git-scm.com/downloads)
+
+### Liste von Accounts, die Sie anlegen werden:
+
+* GitHub Account mit RWTH Email-Adresse [Link](http://www.github.com)
+  * Bitte wählen Sie einen nachvollziehbaren Username (z.B. VornameNachname)
+  * Sollten Sie bereits einen Account haben, ist dieser auch in Ordnung
+* DataCamp Account mit RWTH Email-Adresse [Link](http://www.datacamp.com)
