--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Repository zur Lehrveranstaltung Empirische Forschungsmethoden für Fortgeschrittene an der RWTH Aachen
 
+Github-Seite: Informationen zum Seminar [Link](https://github.com/Sumidu/EmpirischeForschungsmethoden/tree/master/Seminar)
 
+Github-Seite: Informationen zur Vorlesung [Link](https://github.com/Sumidu/EmpirischeForschungsmethoden/tree/master/Vorlesung)
 
 # Aktuelle Informationen
 ## Begleitendes Seminar
@@ -19,10 +21,10 @@ Sollten Sie zu diesem Seminar noch nicht angemeldet sein, bitten wir Sie sich zu
 Termin: **Raum C.A.R.L. S01** Freitags 8:30 - 10:00 Uhr
  
 * Sie benötigen einen Computer (Laptop oder ähnliches, Tablet funktioniert NICHT!)
-  * Auf diesem Laptop werden Sie Software installieren. Sie sollten daher ca. 3-4 GB Speicherplatz  auf diesem Gerät haben und Admin-Rechte haben.
-  * Auf MAC benötigen Sie Sierra oder höher
-  * Auf Windows benötigen Sie 
-  
-Github-Seite Infos zum Seminar [Link](https://github.com/Sumidu/EmpirischeForschungsmethoden/tree/master/Seminar)
+  * Auf diesem Laptop werden Sie Software installieren. Sie sollten daher mindestens 3-4 GB Speicherplatz  auf diesem Gerät haben und Admin-Rechte haben.
+  * Auf MAC benötigen Sie Sierra oder höher.
+  * Auf Windows benötigen Sie Windows 7 oder höher
+  * Eduroam muss auf dem Rechner verfügbar sein [Link](https://doc.itc.rwth-aachen.de/display/EGM/Zugangsdaten+anlegen).
 
-
+In der ersten Sitzung stellen wir sicher, dass Sie im Seminar mitarbeiten können und Sie die Foliensätze bekommen können.
+Daher empfehlen wir Ihnen dringend an dieser Sitzung teilzunehmen.
